# seshat

./: Cargo.toml  README.md  memory.x
cad/: .gitignore  Makefile  get_dxf_bounds.py  main.scad
cad/data/: keycap.stl  layout.txt  plate.dxf  plate.stl  switch.stl
firmware/src/: main.rs
src/: main.rs
