[package]
name = "seshat-1"
version = "0.1.0"
authors = ["james keal <james@keal.com.au>"]
edition = "2018"

[dependencies]
stm32f4xx-hal = { version = "0.7.0", features = ["rt", "stm32f401", "usb_fs"] }
embedded-hal = "0.2.5"
nb = "1.0.0"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
cortex-m-rtic = "0.5.6"
panic-halt = "0.2.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
generic-array = "0.14.4"
usb-device = "0.2.8"
